--- a/css/index.css
+++ b/css/index.css
@@ -292,6 +292,19 @@
     color: white;
 }
 
+.filter a {
+    text-decoration: none;
+    color: black;
+    font-size: 22px;
+    background-color: rebeccapurple;
+}
+
+.filter .btn {
+    margin: 0px;
+    background-color: transparent;
+    float: right;
+}
+
 /* book info */
 .col {
     padding: 0px;
@@ -306,7 +319,7 @@
     margin-bottom: 0px;
 }
 
-#viewCover {
+#viewCover, #viewBookCover {
     max-width: 180px;
 }
 
@@ -657,7 +670,7 @@
 
 /* CONFIG BOOKS */                        /*     ////////////////////////////////////////////////////     */
 .thead-midoffice {
-    background-color: #ba9378;
+    background-color: #9e9e9e;
     color: white;
 }
 
